--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "build": "vite build"
+    "build": "vite build",
+    "analyze": "ANALYZE=true vite build"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@vitejs/plugin-vue": "^5.1.1",
-    "vite": "^5.3.5"
+    "vite": "^5.3.5",
+    "rollup-plugin-visualizer": "^5.12.0"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.5.4"
   },
   "dependencies": {
     "axios": "^1.7.2",
