--- a/package.json
+++ b/package.json
@@ -3,20 +3,19 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
+    "dev": "vite",
     "build": "vite build",
     "analyze": "ANALYZE=true vite build"
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@vitejs/plugin-vue": "^5.1.1",
+    "@vitejs/plugin-vue": "^5.1.2",
     "vite": "^5.3.5",
-    "rollup-plugin-visualizer": "^5.12.0"
-  },
-  "peerDependencies": {
+    "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    "vue": "^3.4.34"
+    "axios": "^1.7.3",
+    "vue": "^3.4.35"
   }
 }
